--- a/quality.html
+++ b/quality.html
@@ -42,7 +42,7 @@
                      <div class="full">
                         <div class="center-desk">
                            <div class="companyname">
-                              <a href="index.html"><h1>HONEY</h1></a>
+                              <a href="index.html"><h1><b>RAW HONEY</b></h1></a>
                            </div>
                         </div>
                      </div>
@@ -90,7 +90,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage text_align_center">
-                     <h2>Quality OF Honey For sale</h2>
+                     <h2>Quality of Honey For Sale</h2>
                      <p>There are many variations of passages of Lorem Ipsum available, but There are many variations of passages of Lorem Ipsum available, but 
                      </p>
                   </div>
