--- a/shop.html
+++ b/shop.html
@@ -42,7 +42,7 @@
                      <div class="full">
                         <div class="center-desk">
                            <div class="companyname">
-                              <a href="index.html"><h1><b>RAW HONEY</B></h1></a>
+                              <a href="index.html"><h1><b>RAW HONEY</b></h1></a>
                            </div>
                         </div>
                      </div>
